
- #11824: Fix a crash when calling `ocamlrun -b`
  (Florian Angeletti, review by Sébastien Hinderer)

- #11815: Marshalling continuations raises invalid argument exception.
  (Jérôme Vouillon, review by Nicolás Ojeda Bär, Stephen Dolan and
   Hugo Heuzard)

- #11846: Mark rbx as destroyed at C call for Win64 (mingw-w64 and Cygwin64).
  (David Allsopp, review by KC Sivaramakrishnan)

- #11850: When stopping before the `emit` phase (using `-stop-after`), an empty
  temporary assembly file is no longer left in the file system.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

- #11866: Fix the result of `caml_read_directory()` on non-existent paths.
  (Andrei Paskevich and Charlène Gros, review by David Allsopp and
   Nicolás Ojeda Bär)

- #11879: Bugfix for Ctype.nondep_type
  (Stephen Dolan, review by Gabriel Scherer)

- #12004: Don't ignore function attributes on lambdas with locally abstract
  types.
  (Chris Casinghino, review by Gabriel Scherer)

- #12046: Flush stderr when tracing the parser
  (Hugo Heuzard, review by David Allsopp and Nicolás Ojeda Bär)

- #12075: auto-detect whether `ar` support @FILE arguments at
  configure-time to avoid using this feature with toolchains
  that do not support it (eg FreeBSD/Darwin).
  (Nicolás Ojeda Bär, review by Xavier Leroy, David Allsop, Javier
  Chávarri, Anil Madhavapeddy)

- #12103, 12104: fix a concurrency memory-safety bug in Buffer
  (Gabriel Scherer, review by Florian Angeletti, report by Samuel Hym)

OCaml 5.0.0 (15 December 2022)
------------------------------

- #10831: Multicore OCaml
  (Enguerrand Decorne, Stephen Dolan, Tom Kelly, Sadiq Jaffer,
  Anil Madhavapeddy, Sudha Parimala, KC Sivaramakrishnan,
  Leo White, the Tarides multicore team,
  review by Florian Angeletti, Damien Doligez, Xavier Leroy,
  Guillaume Munch-Maccagnoni, Olivier Nicole, Nicolás Ojeda Bär,
  Gabriel Scherer, the OCaml core development team, and many
  other valued reviewers.)

### Language features:
